After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 668508 - Webkit crash with "Creating pipes for GWakeup: Too many open files" error
Webkit crash with "Creating pipes for GWakeup: Too many open files" error
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: Misc
unspecified
Other Linux
: Normal normal
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
: 657193 658743 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2012-01-23 15:29 UTC by Priit Laes (IRC: plaes)
Modified: 2012-01-27 15:38 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Priit Laes (IRC: plaes) 2012-01-23 15:29:33 UTC
Try loading https://github.com/adityaravishankar/command-and-conquer/commit/dddadb3385157f0993e4cfc573fed0fba07d375c with Epiphany or GtkLauncher. Observe crash:

GNU gdb (Ubuntu/Linaro 7.3-0ubuntu2) 7.3-2011.08
Copyright (C) 2011 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "x86_64-linux-gnu".
For bug reporting instructions, please see:
<http://bugs.launchpad.net/gdb-linaro/>...
Reading symbols from /home/zan/Dev/webkit/webkit/WebKitBuild/Debug/Programs/GtkLauncher...done.
(gdb) rr
(gdb) 
(gdb) r
Starting program: /home/zan/Dev/webkit/webkit/WebKitBuild/Debug/Programs/GtkLauncher https://github.com/adityaravishankar/command-and-conquer/commit/dddadb3385157f0993e4cfc573fed0fba07d375c
[Thread debugging using libthread_db enabled]
[New Thread 0x7fffa5835700 (LWP 7737)]
[New Thread 0x7fff93c72700 (LWP 7738)]
[Thread 0x7fff93c72700 (LWP 7738) exited]
[New Thread 0x7fff93c72700 (LWP 7739)]
[New Thread 0x7fff92714700 (LWP 7740)]
[Thread 0x7fff92714700 (LWP 7740) exited]
[New Thread 0x7fff92714700 (LWP 7741)]

Program received signal SIGTRAP, Trace/breakpoint trap.
g_logv (log_domain=0x7ffff2dce38e "GLib", log_level=<optimized out>, 
    format=0x7ffff2e1e328 "Creating pipes for GWakeup: %s\n", args1=0x7fffffffc618) at gmessages.c:765
765		  g_private_set (&g_log_depth, GUINT_TO_POINTER (depth));
(gdb) bt full
  • #0 g_logv
    at gmessages.c line 765
  • #1 g_log
    at gmessages.c line 792
  • #2 g_wakeup_new
    at gwakeup.c line 163
  • #3 g_cancellable_make_pollfd
    at gcancellable.c line 406
  • #4 g_cancellable_get_fd
    at gcancellable.c line 357
  • #5 soup_http_input_stream_prepare_for_io
    at soup-http-input-stream.c line 351
  • #6 soup_http_input_stream_send_async_internal
    at soup-http-input-stream.c line 596
  • #7 soup_http_input_stream_send_async
    at soup-http-input-stream.c line 636
  • #8 WebCore::startHTTPRequest
    at ../../Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp line 503
  • #9 WebCore::ResourceHandle::start
    at ../../Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp line 538
  • #10 WebCore::ResourceHandle::create
    at ../../Source/WebCore/platform/network/ResourceHandle.cpp line 71
  • #11 WebCore::ResourceLoader::start
    at ../../Source/WebCore/loader/ResourceLoader.cpp line 162
  • #12 WebCore::ResourceLoadScheduler::servePendingRequests
    at ../../Source/WebCore/loader/ResourceLoadScheduler.cpp line 209
  • #13 WebCore::ResourceLoadScheduler::servePendingRequests
    at ../../Source/WebCore/loader/ResourceLoadScheduler.cpp line 183
  • #14 WebCore::CachedResourceLoader::performPostLoadActions
    at ../../Source/WebCore/loader/cache/CachedResourceLoader.cpp line 692
  • #15 WebCore::CachedResourceLoader::loadDone
    at ../../Source/WebCore/loader/cache/CachedResourceLoader.cpp line 659
  • #16 WebCore::SubresourceLoader::releaseResources
    at ../../Source/WebCore/loader/SubresourceLoader.cpp line 317
  • #17 WebCore::ResourceLoader::didFinishLoading
    at ../../Source/WebCore/loader/ResourceLoader.cpp line 313
  • #18 WebCore::SubresourceLoader::didFinishLoading
    at ../../Source/WebCore/loader/SubresourceLoader.cpp line 278
  • #19 WebCore::ResourceLoader::didFinishLoading
    at ../../Source/WebCore/loader/ResourceLoader.cpp line 451
  • #20 WebCore::readCallback
    at ../../Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp line 663
  • #21 async_ready_callback_wrapper
    at ginputstream.c line 470
  • #22 g_simple_async_result_complete
    at gsimpleasyncresult.c line 744
  • #23 read_async_done
    at soup-http-input-stream.c line 691
  • #24 g_closure_invoke
    at gclosure.c line 774
  • #25 signal_emit_unlocked_R
    at gsignal.c line 3302
  • #26 g_signal_emit_valist
    at gsignal.c line 3033
  • #27 g_signal_emit
    at gsignal.c line 3090
  • #28 process_queue_item
    at soup-session-async.c line 423
  • #29 run_queue
    at soup-session-async.c line 465
  • #30 idle_run_queue
    at soup-session-async.c line 489
  • #31 g_main_dispatch
    at gmain.c line 2513
  • #32 g_main_context_dispatch
    at gmain.c line 3050
  • #33 g_main_context_iterate
    at gmain.c line 3121
  • #34 g_main_context_iterate
    at gmain.c line 3058
  • #35 g_main_loop_run
    at gmain.c line 3315
  • #36 gtk_main
    at gtkmain.c line 1358
  • #37 main
    at ../../Tools/GtkLauncher/main.c line 435

Comment 1 Zan Dobersek 2012-01-23 16:50:39 UTC
The crashing page is very heavy on HTTP requests. As observed in Chromium, the page executes over 2400 HTTP requests by the time it completes loading. In WebKitGtk+, the crash occurs at just over 1000th request. The requests don't seem to be completed quick enough, so they cause a shortage of available file descriptors and subsequent crash.
Comment 2 Dan Winship 2012-01-23 17:39:15 UTC
Fixed in libsoup master
Comment 3 Dan Winship 2012-01-23 18:05:27 UTC
*** Bug 657193 has been marked as a duplicate of this bug. ***
Comment 4 Dan Winship 2012-01-27 14:54:28 UTC
*** Bug 658743 has been marked as a duplicate of this bug. ***
Comment 5 Yves-Alexis Perez 2012-01-27 15:04:07 UTC
Can a fix be backported to stable or is it out of the question?
Comment 6 Dan Winship 2012-01-27 15:38:55 UTC
There are no more releases scheduled in the 3.2 cycle, but the patch I linked to from the other bug applies cleanly to the stable release.